--- a/requirements.txt
+++ b/requirements.txt
@@ -36,13 +36,13 @@ prison==0.1.3
 py==1.9.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
+Pygments==2.7.1
 PyJWT==1.7.1
 pylint==2.6.0
 pyparsing==2.4.7
 pyrsistent==0.16.0
 pytest==6.0.1
 python-dateutil==2.8.1
-python-rules==0.0.1
 python3-openid==3.2.0
 pytz==2020.1
 PyYAML==5.3.1
